gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-web-services-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-web-services
spec:
  hosts:
    - "*"
  gateways:
    - blog-web-services-gateway
  http:
    - match:
        - uri:
            prefix: /user
        - uri:
            prefix: /blogs
      route:
        - destination:
            host: blog-web-services
            port:
              number: 9080
